--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,5 @@
     <string name="title_wishlist">Wishlist</string>
     <string name="title_history">History</string>
     <string name="title_account">Account</string>
-    <string name="firebase_database_url"></string>
-
+    <string name="firebase_app_url">/</string>
 </resources>
